<resources>
    <string name="app_name">Travels</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="image_of_the_place">Image of the place</string>
    <string name="place_title">Place Title</string>
    <string name="date">Date</string>
    <string name="gps_button">GPS button</string>
    <string name="place_description">Place Description</string>
    <string name="take_a_picture">Take a picture</string>
    <string name="image_taken">image taken</string>
    <string name="share">Share</string>
    <string name="username">Username</string>
</resources>